--- a/src/styles.css
+++ b/src/styles.css
@@ -1,6 +1,6 @@
 /* You can add global styles to this file, and also import other style files */
 
-html, body { height: 100%; }
+html, body { height: 100%;margin: 25px;margin-top: 45px; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 
 
@@ -21,13 +21,30 @@ ngx-intl-tel-input input:focus {
 
   
   ngx-intl-tel-input.ng-invalid.ng-touched input {
-    border: 1px solid #c0392b;
+    border: 0px solid #9e9695;
   }
   
-  ngx-intl-tel-input input:hover {
-    box-shadow: 0 1px 0 0 rgba(0, 0, 0, 0.24);
+  .alert {
+    padding: 20px;
+    background-color: #f44336;
+    color: white;
+    margin: 20px;
   }
   
+  .closebtn {
+    margin-left: 15px;
+    color: white;
+    font-weight: bold;
+    float: right;
+    font-size: 22px;
+    line-height: 20px;
+    cursor: pointer;
+    transition: 0.3s;
+  }
+  
+  .closebtn:hover {
+    color: black;
+  }
   
   
   ngx-intl-tel-input input::-webkit-input-placeholder {
@@ -50,3 +67,11 @@ ngx-intl-tel-input input:focus {
     background-color: #e5eaf1;
   }
   
+  .horizSpacing
+  {
+    margin-right: 30px;
+  }
+  .btncenter{
+    width:25%;
+ 
+  }
